Fix footer and add stackoverflow link

--- a/blog/themes/hugo-whisper-theme/assets/scss/style.scss
+++ b/blog/themes/hugo-whisper-theme/assets/scss/style.scss
@@ -56,7 +56,12 @@ body {
   width: 1.8rem;
   top: 0.15rem;
   position: relative;
+
+  .fa-stack-overflow {
+    width: 1.5rem;
+  }
 }
+
 // Display breakpoints for DEV
 // body:after {
 //   color: #000000;
